pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl5.mof
/* No Terminating paren on Flavor definition*/
Qualifier Abstract : boolean = false, 
    Scope(class, association, indication), 
    Flavor(EnableOverride,Restricted;
